@@ -2,7 +2,7 @@
 '\" Copyright (c) 1998-2000 by Scriptics Corporation.
 '\" All rights reserved.
 '\" 
-'\" RCS: @(#) $Id: GetHINSTANCE.3,v 1.3 2008/06/30 22:57:01 dkf Exp $
+'\" RCS: @(#) $Id: GetHINSTANCE.3,v 1.4 2009/11/19 22:48:32 nijtmans Exp $
 '\" 
 .so man.macros
 .TH Tk_GetHISTANCE 3 "" Tk "Tk Library Procedures"
@@ -11,7 +11,7 @@
 Tk_GetHINSTANCE \- retrieve the global application instance handle
 .SH SYNOPSIS
 .nf
-\fB#include <tk.h>\fR
+\fB#include <tkPlatDecls.h>\fR
 .sp
 HINSTANCE
 \fBTk_GetHINSTANCE\fR()
